k8s/observability/mimir.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mimir
  namespace: observability
spec:
  serviceName: mimir
  replicas: 1
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: mimir
          image: grafana/mimir-alpine:2.15.0
          workingDir: /var/mimir/data
          args:
            - "-config.file=/etc/mimir/mimir.yml"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9095
              name: grpc
          livenessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /etc/mimir
            - name: data
              mountPath: /var/mimir
      volumes:
        - name: config
          configMap:
            name: mimir-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-hdd"
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mimir
  namespace: observability
spec:
  selector:
    app: mimir
  ports:
    - port: 8080
      name: http
    - port: 9095
      name: grpc
