k8s/observability/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability-network-policy
  namespace: observability
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # 1. Permite comunicação total interna dentro do próprio namespace observability
    - from:
        - podSelector: {}

    # 2. Permite tráfego do Traefik (namespace ingress) para a UI do Grafana
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/managed-by: terraform
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3000

    # 3. Permite ingestão de telemetria OTLP dos microsserviços (namespace apps)
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/managed-by: terraform
      ports:
        - protocol: TCP
          port: 4317 # OTLP gRPC
        - protocol: TCP
          port: 4318 # OTLP HTTP
